refactor：重构认证与工具层以提升稳定性与可维护性
- 移除双 Token 机制，改为基于访问频率的无感自动续期策略
- 引入 Redisson 替代自研分布式锁与 Redis 工具类，统一使用 Redisson 实现